--- a/Weather Project PM/Views/ResultsTableViewCell/ResultsTableViewCell.xib
+++ b/Weather Project PM/Views/ResultsTableViewCell/ResultsTableViewCell.xib
@@ -21,19 +21,28 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Temperature" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dOC-g8-Qa4">
-                    <rect key="frame" x="302" y="29" width="97" height="21"/>
+                    <rect key="frame" x="253" y="29" width="97" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="plus.circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="6gQ-wB-8WD">
+                    <rect key="frame" x="370" y="25.5" width="29" height="28"/>
+                    <constraints>
+                        <constraint firstAttribute="width" secondItem="6gQ-wB-8WD" secondAttribute="height" multiplier="1:1" id="mLf-j9-ZS5"/>
+                    </constraints>
+                </imageView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
+                <constraint firstItem="6gQ-wB-8WD" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="25" id="7z0-80-F2Z"/>
                 <constraint firstItem="SiO-TD-2fO" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="ERc-oN-Fj5"/>
                 <constraint firstItem="dOC-g8-Qa4" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="F3I-7e-z91"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="dOC-g8-Qa4" secondAttribute="trailing" constant="15" id="VWn-1s-MDj"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="6gQ-wB-8WD" secondAttribute="bottom" constant="25" id="Q2h-2d-6zA"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="6gQ-wB-8WD" secondAttribute="trailing" constant="15" id="Vld-T0-9b8"/>
                 <constraint firstItem="SiO-TD-2fO" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="15" id="m2T-5J-U6M"/>
+                <constraint firstItem="6gQ-wB-8WD" firstAttribute="leading" secondItem="dOC-g8-Qa4" secondAttribute="trailing" constant="20" id="nxy-Iq-7IP"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
@@ -44,6 +53,7 @@
         </view>
     </objects>
     <resources>
+        <image name="plus.circle" catalog="system" width="128" height="121"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
